--- a/zaa.html
+++ b/zaa.html
@@ -6,8 +6,8 @@
   <title>Abg kaban di hati, abg ocis, adek purba🥰</title>
   <style>
     :root {
-      --bg1: #F0DDE1;
-      --bg2: #C9E7F2;
+      --bg1: #E3DFFD;
+      --bg2: #BFDCE5;
       --bg3: #C4DAD2;
       --accent: #9ED2C6;
       --text: #2c2c2c;
@@ -32,12 +32,11 @@
     .container {
       width: 100%;
       max-width: 950px;
-      background: rgba(255,255,255,0.7);
+      background: rgba(255,255,255,0.75);
       border-radius: 20px;
       padding: 30px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.1);
       backdrop-filter: blur(8px);
-      transition: 0.5s;
     }
     h1 {
       text-align: center;
@@ -50,17 +49,20 @@
       margin-bottom: 25px;
     }
     .btn {
-      display: inline-block;
-      padding: 10px 18px;
-      border-radius: 12px;
+      display: block;
+      margin: 0 auto;
+      padding: 16px 40px;
+      border-radius: 16px;
       border: none;
-      background: var(--accent);
+      background: linear-gradient(90deg, #9ED2C6, #89B9AD);
       color: white;
-      font-weight: 600;
+      font-weight: 700;
+      font-size: 18px;
       cursor: pointer;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
       transition: 0.3s;
     }
-    .btn:hover { transform: scale(1.05); background: #8ac1b7; }
+    .btn:hover { transform: scale(1.08); background: linear-gradient(90deg,#8cc2b8,#7fb3a8); }
     .section { display: none; animation: fadeIn 0.7s ease; }
     .active { display: block; }
     .names { margin-top: 15px; }
@@ -135,6 +137,16 @@
       transition: 0.3s;
     }
     .nav-btn:hover { transform: scale(1.05); }
+    .verse {
+      margin-top: 30px;
+      text-align: center;
+      font-style: italic;
+      color: #4b4b4b;
+      background: rgba(255,255,255,0.5);
+      border-radius: 12px;
+      padding: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+    }
   </style>
 </head>
 <body>
@@ -142,15 +154,21 @@
     <section id="beranda" class="section active">
       <h1>Abg kaban di hati, abg ocis, adek purba🥰</h1>
       <p class="lead">Komunitas penuh tawa dan kehangatan — kenali anggota kami!</p>
-      <button id="masukBtn" class="btn">Masuk</button>
+
+      <button id="masukBtn" class="btn">✨ Masuk ✨</button>
       <div class="names" id="namesArea"></div>
       <div class="profiles" id="profiles"></div>
+
+      <div class="verse">
+        “A friend loves at all times, and a brother is born for a time of adversity.”<br>
+        <strong>— Proverbs 17:17 (NIV)</strong>
+      </div>
 
       <div class="nav-btns">
         <button class="nav-btn" onclick="showSection('galeri')">🌸 Lihat Galeri Kami 🌸</button>
       </div>
 
-      <footer>© 2025 Abg kaban di hati — Dibuat dengan 💙 pastel vibes</footer>
+      <footer>© 2025 Oryza Pranantha Ginting — All Rights Reserved</footer>
     </section>
 
     <section id="galeri" class="section">
@@ -230,3 +248,4 @@
   </script>
 </body>
 </html>
+
