--- a/abg.html
+++ b/abg.html
@@ -172,7 +172,7 @@
     </section>
 
     <section id="galeri" class="section">
-      <h1>Galeri Komunitas 💖</h1>
+      <h1>Galeri Kamiii</h1>
       <div class="gallery">
         <img src="foto 1.jpg" alt="Foto kegiatan 1">
         <img src="foto 2.jpg" alt="Foto kegiatan 2">
@@ -248,5 +248,6 @@
   </script>
 </body>
 </html>
+
 
 
