--- a/cila.html
+++ b/cila.html
@@ -179,6 +179,10 @@
         <img src="foto 3.jpg" alt="Foto kegiatan 3">
         <img src="foto 4.jpg" alt="Foto kegiatan 4">
         <img src="foto 5.jpg" alt="Foto kegiatan 5">
+        <video controls width="600">
+  <source src="video alexa.mp4" type="video/mp4">
+  Browser kamu tidak mendukung video.
+</video>
       </div>
 
       <div class="nav-btns">
@@ -248,4 +252,5 @@
   </script>
 </body>
 </html>
+
 
