--- a/abg.html
+++ b/abg.html
@@ -168,7 +168,7 @@
         <button class="nav-btn" onclick="showSection('galeri')">🌸 Lihat Galeri Kami 🌸</button>
       </div>
 
-      <footer>© 2025 Oryza Pranantha Ginting — All Rights Reserved</footer>
+      <footer>© 2025 Oryza Ginting — All Rights Reserved</footer>
     </section>
 
     <section id="galeri" class="section">
@@ -248,6 +248,7 @@
   </script>
 </body>
 </html>
+
 
 
 
