--- a/abg.html
+++ b/abg.html
@@ -190,7 +190,7 @@
   <script>
     const anggota = [
       {id:'alexa',name:'Alexa',nick:'Lex',fullname:'Alexa Artana Gurning',ttl:'Medan, 30 Maret 2010',alamat:'Sungall',univ:'Universitas Indonesia',cita:'Pacar Bg Mayer',bio:'Mayer Christoper Sinambela',hobbies:['Makan es krim','Nonton drama','Ngobrol bareng']},
-      {id:'carenina',name:'Carenina',nick:'Pagit',fullname:'Carenina Aurelly Tarigan',ttl:'Medan, 10 Oktober 2010',alamat:'Bulann 103!!',univ:'UI Hukum / PKN STAN',cita:'Menjadi jodoh Jaehyun',bio:'Yaachel Kaban',hobbies:['Menyanyi','Dance','Basket date dgn bang yaachel']},
+      {id:'carenina',name:'Carenina',nick:'Pagit',fullname:'Carenina Aurelly Tarigan',ttl:'Medan, 10 Oktober 2010',alamat:'Bulann 103!!',univ:'UI Hukum / PKN STAN',cita:'Menjadi jodoh Jaehyun',bio:'Yaachel Kaban',hobbies:['gatau lahh','Dance','Basket date dgn bang yaachel']},
       {id:'nicholas',name:'Nicholas',nick:'Nic',fullname:'Nicholas Jeferson Ritonga',ttl:'Medan, 19 Maret 2010',alamat:'DP Gais',univ:'Stanford University',cita:'Dokter',bio:'Rivka Michelle Napitupulu',hobbies:['Olahraga','Main game','Masak']},
       {id:'oryza',name:'Oryza',nick:'Ory',fullname:'Oryza Pranantha Ginting',ttl:'Medan, 26 April 2010',alamat:'Delta',univ:'Institut Teknologi Bandung',cita:'Jek jek boypren',bio:'Jacquelyn Claudia Purba',hobbies:['Desain web','Fotografi','Hangout']}
     ];
@@ -248,6 +248,7 @@
   </script>
 </body>
 </html>
+
 
 
 
