--- a/abg.html
+++ b/abg.html
@@ -179,6 +179,7 @@
         <img src="foto 3.jpg" alt="Foto kegiatan 3">
         <img src="foto 4.jpg" alt="Foto kegiatan 4">
         <img src="foto 5.jpg" alt="Foto kegiatan 5">
+        <img src="foto bg yaachel.jpg" alt="Foto kegiatan 6">
       </div>
 
       <div class="nav-btns">
@@ -248,6 +249,7 @@
   </script>
 </body>
 </html>
+
 
 
 
