--- a/abg.html
+++ b/abg.html
@@ -37,6 +37,7 @@
       padding: 30px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.1);
       backdrop-filter: blur(8px);
+      position: relative;
     }
     h1 {
       text-align: center;
@@ -65,7 +66,6 @@
     .btn:hover { transform: scale(1.08); background: linear-gradient(90deg,#8cc2b8,#7fb3a8); }
     .section { display: none; animation: fadeIn 0.7s ease; }
     .active { display: block; }
-    .names { margin-top: 15px; }
     .name-btn {
       display: block;
       width: 100%;
@@ -117,14 +117,9 @@
       border-radius: 14px;
       box-shadow: 0 6px 20px rgba(0,0,0,0.1);
       transition: 0.3s;
+      cursor: pointer;
     }
-    .gallery img:hover { transform: scale(1.05); box-shadow: 0 10px 25px rgba(0,0,0,0.2); }
-    .nav-btns {
-      display: flex;
-      justify-content: center;
-      gap: 12px;
-      margin-top: 25px;
-    }
+    .gallery img:hover { transform: scale(1.05); }
     .nav-btn {
       padding: 10px 20px;
       border-radius: 14px;
@@ -135,6 +130,7 @@
       cursor: pointer;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       transition: 0.3s;
+      margin-top: 25px;
     }
     .nav-btn:hover { transform: scale(1.05); }
     .verse {
@@ -147,52 +143,132 @@
       padding: 15px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.05);
     }
+    /* Popup Foto */
+    .popup {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.7);
+      justify-content: center;
+      align-items: center;
+    }
+    .popup img {
+      max-width: 90%;
+      max-height: 80%;
+      border-radius: 20px;
+      box-shadow: 0 0 20px #000;
+    }
+    .close {
+      position: absolute;
+      top: 30px;
+      right: 40px;
+      font-size: 40px;
+      color: white;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    /* Tombol Mute */
+    .mute-toggle {
+      position: absolute;
+      top: 15px;
+      right: 25px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
+    }
+    .switch input { opacity: 0; width: 0; height: 0; }
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-color: #ccc;
+      transition: .4s;
+      border-radius: 34px;
+    }
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 26px; width: 26px;
+      left: 4px; bottom: 4px;
+      background-color: white;
+      transition: .4s;
+      border-radius: 50%;
+    }
+    input:checked + .slider {
+      background-color: #9ED2C6;
+    }
+    input:checked + .slider:before {
+      transform: translateX(26px);
+    }
   </style>
 </head>
 <body>
+  <audio id="bgMusic" src="Kahitna - Engga Ngerti (Official Music Video).mp3" autoplay loop></audio>
+
   <div class="container">
+    <div class="mute-toggle">
+      🔊
+      <label class="switch">
+        <input type="checkbox" id="muteSwitch" checked>
+        <span class="slider"></span>
+      </label>
+    </div>
+
     <section id="beranda" class="section active">
       <h1>Abg kaban di hati, abg ocis, adek purba🥰</h1>
       <p class="lead">Komunitas penuh tawa dan kehangatan — kenali anggota kami!</p>
 
       <button id="masukBtn" class="btn">✨ Masuk ✨</button>
-      <div class="names" id="namesArea"></div>
-      <div class="profiles" id="profiles"></div>
+      <div id="namesArea"></div>
+      <div id="profiles"></div>
 
       <div class="verse">
         “A friend loves at all times, and a brother is born for a time of adversity.”<br>
         <strong>— Proverbs 17:17 (NIV)</strong>
       </div>
 
-      <div class="nav-btns">
-        <button class="nav-btn" onclick="showSection('galeri')">🌸 Lihat Galeri Kami 🌸</button>
-      </div>
-
+      <button class="nav-btn" onclick="showSection('galeri')">🌸 Lihat Galeri Kami 🌸</button>
       <footer>© 2025 Oryza Ginting — All Rights Reserved</footer>
     </section>
 
     <section id="galeri" class="section">
-      <h1>Galeri Kamiii</h1>
+      <h1>Galeri Kami 📸</h1>
       <div class="gallery">
-        <img src="foto 1.jpg" alt="Foto kegiatan 1">
-        <img src="foto 2.jpg" alt="Foto kegiatan 2">
-        <img src="foto 3.jpg" alt="Foto kegiatan 3">
-        <img src="foto 4.jpg" alt="Foto kegiatan 4">
-        <img src="foto 5.jpg" alt="Foto kegiatan 5">
+        <img src="foto 1.jpg" alt="Foto 1">
+        <img src="foto 2.jpg" alt="Foto 2">
+        <img src="foto 3.jpg" alt="Foto 3">
+        <img src="foto 4.jpg" alt="Foto 4">
+        <img src="foto 5.jpg" alt="Foto 5">
       </div>
-
-      <div class="nav-btns">
-        <button class="nav-btn" onclick="showSection('beranda')">⬅️ Kembali ke Profil</button>
-      </div>
+      <button class="nav-btn" onclick="showSection('beranda')">⬅️ Kembali ke Profil</button>
     </section>
   </div>
 
+  <div id="popup" class="popup">
+    <span class="close" onclick="closePopup()">×</span>
+    <img id="popupImg" src="">
+  </div>
+
   <script>
+    const audio = document.getElementById("bgMusic");
+    const muteSwitch = document.getElementById("muteSwitch");
+    muteSwitch.addEventListener("change", () => {
+      audio.muted = !muteSwitch.checked;
+    });
+
     const anggota = [
-      {id:'alexa',name:'Alexa',nick:'Lex',fullname:'Alexa Artana Gurning',ttl:'Medan, 30 Maret 2010',alamat:'Sungall',univ:'Universitas Indonesia',cita:'Pacar Bg Mayer',bio:'Mayer Christoper Sinambela',hobbies:['Makan es krim','Nonton drama','Ngobrol bareng']},
-      {id:'carenina',name:'Carenina',nick:'Pagit',fullname:'Carenina Aurelly Tarigan',ttl:'Medan, 10 Oktober 2010',alamat:'Bulann 103!!',univ:'UI Hukum / PKN STAN',cita:'Menjadi jodoh Jaehyun',bio:'Yaachel Kaban',hobbies:['gatau lahh','Dance','Basket date dgn bang yaachel']},
-      {id:'nicholas',name:'Nicholas',nick:'Nic',fullname:'Nicholas Jeferson Ritonga',ttl:'Medan, 19 Maret 2010',alamat:'DP Gais',univ:'Stanford University',cita:'Dokter',bio:'Rivka Michelle Napitupulu',hobbies:['Olahraga','Main game','Masak']},
-      {id:'oryza',name:'Oryza',nick:'Ory',fullname:'Oryza Pranantha Ginting',ttl:'Medan, 26 April 2010',alamat:'Delta',univ:'Institut Teknologi Bandung',cita:'Jek jek boypren',bio:'Jacquelyn Claudia Purba',hobbies:['Desain web','Fotografi','Hangout']}
+      {id:'alexa',name:'Alexa',nick:'Lex',fullname:'Alexa Artana Gurning',ttl:'Medan, 30 Maret 2010',alamat:'Sungall',univ:'Universitas Indonesia',cita:'Pacar Bg Mayer',bio:'Mayer Christoper Sinambela'},
+      {id:'carenina',name:'Carenina',nick:'Pagit',fullname:'Carenina Aurelly Tarigan',ttl:'Medan, 10 Oktober 2010',alamat:'Bulann 103!!',univ:'UI Hukum / PKN STAN',cita:'Menjadi jodoh Jaehyun',bio:'Yaachel Kaban'},
+      {id:'nicholas',name:'Nicholas',nick:'Nic',fullname:'Nicholas Jeferson Ritonga',ttl:'Medan, 19 Maret 2010',alamat:'DP Gais',univ:'Stanford University',cita:'Dokter',bio:'Rivka Michelle Napitupulu'},
+      {id:'oryza',name:'Oryza',nick:'Ory',fullname:'Oryza Pranantha Ginting',ttl:'Medan, 26 April 2010',alamat:'Delta',univ:'Institut Teknologi Bandung',cita:'Jek jek boypren',bio:'Jacquelyn Claudia Purba'}
     ];
 
     const masukBtn = document.getElementById('masukBtn');
@@ -227,8 +303,7 @@
               <strong>Tempat, Tanggal Lahir:</strong> ${a.ttl}<br>
               <strong>Alamat:</strong> ${a.alamat}<br>
               <strong>Universitas Impian:</strong> ${a.univ}<br>
-              <strong>Cita-cita:</strong> ${a.cita}<br>
-              <strong>Hobi:</strong> ${a.hobbies.join(', ')}
+              <strong>Cita-cita:</strong> ${a.cita}
             </div>`;
           profilesArea.appendChild(div);
         });
@@ -245,14 +320,16 @@
       document.getElementById(id).classList.add('active');
       window.scrollTo({ top: 0, behavior: 'smooth' });
     }
+
+    const popup = document.getElementById("popup");
+    const popupImg = document.getElementById("popupImg");
+    document.querySelectorAll(".gallery img").forEach(img => {
+      img.addEventListener("click", () => {
+        popup.style.display = "flex";
+        popupImg.src = img.src;
+      });
+    });
+    function closePopup() { popup.style.display = "none"; }
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
