--- a/abg.html
+++ b/abg.html
@@ -248,6 +248,8 @@
         <img src="foto 3.jpg" alt="Foto 3">
         <img src="foto 4.jpg" alt="Foto 4">
         <img src="foto 5.jpg" alt="Foto 5">
+        <img src="foto 6.jpg" alt="Foto 6">
+        <img src="foto 7.jpg" alt="Foto 7">
       </div>
       <button class="nav-btn" onclick="showSection('beranda')">⬅️ Kembali ke Profil</button>
     </section>
@@ -338,3 +340,4 @@
   </script>
 </body>
 </html>
+
