--- a/abg.html
+++ b/abg.html
@@ -216,7 +216,6 @@
 
   <div class="container">
     <div class="mute-toggle">
-      🔊
       <label class="switch">
         <input type="checkbox" id="muteSwitch">
         <span class="slider"></span>
@@ -250,6 +249,9 @@
         <img src="foto 5.jpg" alt="Foto 5">
         <img src="foto 6.jpg" alt="Foto 6">
         <img src="foto 7.jpg" alt="Foto 7">
+        <img src="foto 8.jpg" alt="Foto 8">
+        <img src="kertas biodata.jpg" alt="Foto KB">
+        <img src="foto 9.jpg" alt="Foto 9">
       </div>
       <button class="nav-btn" onclick="showSection('beranda')">⬅️ Kembali ke Profil</button>
     </section>
@@ -340,4 +342,5 @@
   </script>
 </body>
 </html>
+
 
